working on backend

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+/* BY ME */
+.avatar{
+  width: 80px;
+  height: 80px;
+}
+.stationCodes{
+  border: 3px solid black;
+}
